# cregex

./: .gitignore  CMakeLists.txt  LICENSE
cre/: main.c
include/cre/: cre.h
libcre/: cre.c
